// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Multichannel buttons: truncate text if more than 20 chars in whatsapp buttons 1`] = `
<button
  payload="payload1"
>
  With text longer ...
</button>
`;

exports[`Multichannel buttons: with URL 1`] = `"- With URL: https://docs.botonic.io/"`;

exports[`Multichannel buttons: with path 1`] = `"1.- With path"`;

exports[`Multichannel buttons: with payload 1`] = `"1- With payload"`;

exports[`Multichannel buttons: with webview 1`] = `
<button
  url="/webviews/undefined?"
>
  With webview
</button>
`;
